--- a/www/index.html
+++ b/www/index.html
@@ -5,10 +5,10 @@
 		<meta name="format-detection" content="telephone=no" />
 		<meta name="msapplication-tap-highlight" content="no" />
 		<meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height" />
-		<meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' data: gap: https://ssl.gstatic.com; object-src *; style-src 'self' data: 'unsafe-inline'; img-src 'self' data:; media-src 'self' data:; font-src 'self' data:; connect-src *">
+		<meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval'; object-src *; style-src 'self' data: 'unsafe-inline'; img-src 'self' data:; media-src 'self' data:; font-src 'self' data:; connect-src *">
 		<title>React hot-loading Hello World</title>
 	</head>
-	<body> 
+	<body>
 		<div id="app"></div>
 		<script type="text/javascript" src="./cordova.js"></script>
 		<script type="text/javascript" src="./bundle.js"></script>
